# FirstTest

./: CMakeLists.txt  FirstTest_de.ts  FirstTest_en.ts  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
